# Water-Of-Life

./: .gitignore  Cargo.toml  build.sh
.sqlx/: query-22152a4caa03889487d3274a5a088ad8a62319723cbdc3b86c1932c57291911c.json  query-42a93c4e76a9b7f198a3ee97acda7fb4e3874c6970257ca5dd6ec4681ff554f4.json  query-446ca61eda23a4dfff907c5d909506ac4e08323b9be346116f92a1afd0347c25.json  query-8bd057524034b1724c1070cbd5e74eef3e72deb913690ec29a8fa667546d1e3a.json  query-a3796707660b96d360115d6ad211d20e0c5961efc13ebd1d131a16439f662b23.json  query-bc3c905e814d686f1e57f6b01e94993356945a338d6307e74a6e5f08e04dc7e4.json  query-d14e55f3f1530d9f986c742ffb846e15f848ae24e504a6216bd8e89c18ebd704.json
frontend/: package-lock.json  package.json
frontend/src/lib/components/: ArrowLabel.svelte  SelectableLabel.svelte  Slider.svelte  (+2 more)
frontend/src/routes/: +page.server.ts  +page.svelte
migrations/: 0001_users_table.sql  0002_spirits_table.sql  0003_scopes_table.sql  0004_user_scopes_table.sql  0005_user_to_scopes_view.sql  0006_role_table.sql
spirit_database/: brandy.json  rum.json  scraper.js  test.json  whiskey.json
spirit_database/bottleraiders/: agave.json  database_creator.py  gin.json  liqueur.json  old_whiskey_stats.json  scraper.js  stat_extractor.py  vodka.json  whiskey_stats.json
spirit_database/whiskeybase/: __main__.py
sql/: insert_scope.sql  insert_spirit.sql  insert_user.sql  insert_user_scopes.sql  search_spirit.sql  select_scopes.sql  select_user.sql  select_user_refresh_token_version.sql
src/: cookie.rs  json_web.rs  jwt.rs  main.rs  middleware.rs  routes.rs  services.rs
src/json_web/: jwk.rs  jwt.rs
src/routes/: jwt.rs  oidc.rs
src/services/: api.rs  oidc.rs
(+4 files in other folders)
