[package]
name = "water-of-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
base64 = "0.22.1"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
openssl = "0.10.66"
reqwest = { version = "0.12.5", features=["json"] }
rsa = "0.9.6"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio"] }
textnonce = "1.0.0"
thiserror = "1.0.63"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tower-sessions = "0.12.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
